@@ -55,7 +55,7 @@
 #       Simon J. Gerraty <sjg@crufty.net>
 
 # RCSid:
-#	$Id: install-mk,v 1.201 2021/10/14 07:05:26 sjg Exp $
+#	$Id: install-mk,v 1.202 2021/10/25 18:23:01 sjg Exp $
 #
 #	@(#) Copyright (c) 1994 Simon J. Gerraty
 #
@@ -70,7 +70,7 @@
 #	sjg@crufty.net
 #
 
-MK_VERSION=20211011
+MK_VERSION=20211024
 OWNER=
 GROUP=
 MODE=444
